# fast_smart_scanning

./: .gitignore  LICENSE  README.md  Readme.txt  pyproject.toml  setup.py  test.py
experiment/: initial_intensities.npy  initial_route.npz  instructions.csv  logging_test_experiment.py  readMDA.py  test_experiment.py  test_simulation.ipynb  test_simulation.py  visualize.ipynb
fast/: input_params.py
fast/core/: base.py  data_structures.py  erd.py  erd_pytorch.py  measurement_interface.py  neighbors.py  recons.py  results.py  sampling.py  simulation_base.py  slads_features.py  training.py
fast/s26_analysis/: __init__.py  utils.py
fast/s26_runners/: helper.py  runner.py
fast/utils/: __init__.py  generate_scan_pattern.py  img_loader.py  logger.py  readMDA.py  renormalize.py  sftp.py
sector26/scanning_bcdi/: helper.py
sector26/scanning_bragg/: helper.py  runner.py
sector26/stxm/: runner.py
sladsnet/: input_params.py
sladsnet/code/: base.py  data_structures.py  erd.py  measurement_interface.py  neighbors.py  plotter.py  recons.py  results.py  running.py  sampling.py  simulation_base.py  slads_features.py  training.py  utils.py
sladsnet/utils/: generate_scan_pattern.py  logger.py  sftp.py
work_directory/: infer_erd_img.ipynb  test_93_to_flakes.ipynb  test_cameraman.ipynb  test_cameraman_to_flakes.ipynb  training_93.ipynb  training_cameraman.ipynb  visualize_ground_truth_erd_image.ipynb  visualize_inferred_erd.ipynb
work_directory/analyze_s26_scans/: Untitled.ipynb  norm_xrm.tif  simulate_scan_for_rescaled_data.ipynb  visualize_inferred_erd.ipynb  (+1 more)
(+73 files in other folders)
