[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_scan"
authors = [
    {name = "Saugat Kandel"},
]
description = "Fast Autonomous Scanning Toolkit"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "joblib",
    "matplotlib",
    "tqdm",
    "tifffile",
    "jupyter",
    "ipywidgets"
]
version = "0.0.4"


[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.optional-dependencies]
examples = ["odl"]

beamline = [
    "pyepics",
    "paramiko",
    "tk"
]
